--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-Flask
-Flask-JWT-Extended
-Flask-SQLAlchemy
-Flask-Cors
-python-dotenv
-Werkzeug
-requests
-pytest
-pytest-flask
-pytest-cov
+Flask==2.3.2
+Flask-JWT-Extended==4.5.3
+Flask-SQLAlchemy==3.1.1
+Flask-Cors==4.0.0
+python-dotenv==1.0.1
+Werkzeug==2.3.7
+requests==2.31.0
+pytest==8.0.0
+pytest-flask==1.3.0
+pytest-cov==4.1.0
+psycopg2-binary==2.9.9
+Flask-Mailman==0.3.0
